@startuml
!define KO_KOTLIN
!define KO_ICON
skinparam class {
    BackgroundColor White
    ArrowColor SeaGreen
    BorderColor Black
}

package "com.codetutor.solidprinciples.integrated" {



    class College {
        -departments: MutableList<Department>
        -staff: MutableList<Staff>
        -students: MutableList<Student>
        -courses: MutableList<Course>
        -staffManager: IStaffManager
        -studentManager: IStudentManager
        -engagementManager: IEngagementManager
        +addDepartment(department: Department)
        +addStudent(student: Student)
        +addCourse(course: Course)
        +assignStaffToDepartment(staffMember: Staff, department: Department)
        +engageStudents(staffMember: Staff, subject: String, students: List<Student>)
    }

    abstract class Department {
        + name: String
    }

    class AcademicDepartment extends Department
    class NonAcademicDepartment extends Department

    abstract class Student {
        + name: String
        + age: Int
        + dateOfBirth: String
        + department: Department
        + currentSemester: Int
        + address: Address
    }

    interface CourseTypeProvider {
        + getCourseType(): String
    }

    class UndergraduateStudent extends Student implements CourseTypeProvider {
        + getCourseType(): String
    }

    class PostGraduateStudent extends Student implements CourseTypeProvider {
        + getCourseType(): String
    }

    class PhdStudent extends Student implements CourseTypeProvider {
        + getCourseType(): String
    }

    class PostDocStudent extends Student

    abstract class Staff {
        + name: String
        + department: Department
        + salaryCalculator: SalaryCalculator

        + abstract engageStudents(subject: String, students: List<Student>, strategy: EngagementStrategy)
    }

    interface SalaryReceivingStaff {
        + getSalary(): Double
    }

    class AcademicStaff extends Staff implements SalaryReceivingStaff {
        + salary: Double
        + getSalary(): Double
        + engageStudents(subject: String, students: List<Student>, strategy: EngagementStrategy)
    }

    class NonAcademicStaff extends Staff implements SalaryReceivingStaff {
        + salary: Double
        + getSalary(): Double
        + engageStudents(subject: String, students: List<Student>, strategy: EngagementStrategy)
    }

    class VisitingStaff extends Staff {
        + payPerVisit: Double
        + engageStudents(subject: String, students: List<Student>, strategy: EngagementStrategy)
    }

    abstract class Course {
        + name: String
        + department: Department
    }

    interface TenureProvider {
        + getTenure(): Int?
    }

    class UndergraduateCourse extends Course implements TenureProvider {
        + tenure: Int
        + getTenure(): Int?
    }

    class PostGraduateCourse extends Course implements TenureProvider {
        + tenure: Int
        + getTenure(): Int?
    }

    class PhdCourse extends Course
    class PostDocCourse extends Course

    interface DetailedAddress {
        + getFullAddress(): String
        + getLocalAddress(): String
        + getHomeAddress(): String
        + getPostalCode(): String
    }

    class Address implements DetailedAddress {
        + localAddress: String?
        + homeAddress: String
        + getFullAddress(): String
        + getLocalAddress(): String
        + getHomeAddress(): String
        + getPostalCode(): String
    }
}

package "com.codetutor.solidprinciples.integrated.calculators" {

    interface SalaryCalculator {
        + calculateSalary(staff: Staff): Double
    }

    class AcademicSalaryCalculator implements SalaryCalculator {
        + calculateSalary(staff: Staff): Double
    }

    class VisitingSalaryCalculator implements SalaryCalculator {
        + calculateSalary(staff: Staff): Double
    }

    interface PayslipGenerator {
        + generatePaySlip(staff: Staff): String
    }

    interface BonusApplier {
        + applyBonus(staff: Staff, bonus: Double): Double
    }

    interface TDSCalculator {
        + deductTaxes(staff: Staff, tax: Double): Double
    }
}

package "com.codetutor.solidprinciples.integrated.managers" {

    interface EngagementStrategy {
        + engageStudents(staff: Staff, subject: String, students: List<Student>)
    }

    interface IStudentManager {
            +registerStudent(students: MutableList<Student>, student: Student)
            +engageStudents(staff: Staff, subject: String, students: List<Student>)
        }

    interface IStaffManager {
        +assignStaffToDepartment(staff: Staff, department: Department)
    }

    interface IEngagementManager {
        +engageStudents(staff: Staff, subject: String, students: List<Student>)
    }

    class StudentManager implements IStudentManager {
        -engagementManager: IEngagementManager
        +registerStudent(students: MutableList<Student>, student: Student)
        +engageStudents(staff: Staff, subject: String, students: List<Student>)
    }

    class StaffManager implements IStaffManager {
        +assignStaffToDepartment(staff: Staff, department: Department)
    }

    class EngagementManager implements IEngagementManager {
        -strategies: Map<String, EngagementStrategy>
        +engageStudents(staff: Staff, subject: String, students: List<Student>)
    }

    class WorkshopEngagement implements EngagementStrategy {
        + engageStudents(staff: Staff, subject: String, students: List<Student>)
    }

    class LectureEngagement implements EngagementStrategy, MaterialPreperator {
        + engageStudents(staff: Staff, subject: String, students: List<Student>)
        + prepareMaterials(staff: Staff, subject: String)
    }

    interface MaterialPreperator {
        + prepareMaterials(staff: Staff, subject: String)
    }
}

' Class Hierarchy
Department <|-- AcademicDepartment
Department <|-- NonAcademicDepartment

Student <|-- UndergraduateStudent
Student <|-- PostGraduateStudent
Student <|-- PhdStudent
Student <|-- PostDocStudent

Course <|-- UndergraduateCourse
Course <|-- PostGraduateCourse
Course <|-- PhdCourse
Course <|-- PostDocCourse

Staff <|-- AcademicStaff
Staff <|-- NonAcademicStaff
Staff <|-- VisitingStaff

SalaryCalculator <|.. AcademicSalaryCalculator
SalaryCalculator <|.. VisitingSalaryCalculator

EngagementStrategy <|.. LectureEngagement
EngagementStrategy <|.. WorkshopEngagement

IStaffManager <|.. StaffManager
IStudentManager <|.. StudentManager
IEngagementManager <|.. EngagementManager

' Associations, Multiplicity, and Labels
College "1" -- "*" Department : has >
College "1" -- "*" Staff : employs >
College "1" -- "*" Student : enrolls >
College "1" -- "*" Course : offers >
College "1" -- "1" IStaffManager : uses >
College "1" -- "1" IStudentManager : uses >
College "1" -- "1" IEngagementManager : uses >

Department "1" -- "*" Course : includes >
Department "1" -- "*" Staff : employs >
Department "1" -- "*" Student : contains >

Staff "1" -- "1" Department : belongs to >
Staff "1" -- "*" Student : engages >
Staff "1" -- "1" SalaryCalculator : calculates salary with >
Staff "1" -- "1" EngagementStrategy : engages students with >

Student "*" -- "*" Course : enrolls in >
Student "1" -- "1" Department : belongs to >
Student "1" -- "1" Address : lives at >

Course "1" -- "1" Department : offered by >

Address "1" -- "1" Student : belongs to >

StaffManager "1" -- "*" Staff : manages >
StaffManager "1" -- "*" Department : assigns to >

StudentManager "1" -- "*" Student : registers >
StudentManager "1" -- "1" IEngagementManager : uses >

EngagementManager "1" -- "*" EngagementStrategy : manages >
EngagementManager "1" -- "*" Staff : engages >
EngagementManager "1" -- "*" Student : engages >

LectureEngagement "1" -- "1" MaterialPreperator : prepares materials >


@enduml